--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,5 @@
 @import './products.scss';
+@import './newProduct.scss';
+@import './header.scss';
+@import './search.scss';
+@import './addButton.scss'
